--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+        <h1>Faça o seu login</h1>
+        <label for="email">Seu e-mail*</label>
+        <input type="email" id="email" />
+        <label for="password">Sua senha*</label>
+        <input type="password" id="password" />
+        <input type="checkbox" />
+        <p>Lembrar-me</p>
+        <button>Entrar</button>
+        <p>
     <script src="main.js"></script>
 </body>
 </html>
